less/app.less
/* ... */
canvas {
	display: none;
	background: @musicDark;
}

.content {
	display: table;
	width: 100%;
	max-width: 1200px;
	margin: 0 auto;
	padding-left: @grid-gutter-width * 2.5;

	.poster-wrapper,
	.container {
		display: table-cell;
		vertical-align: top;
	}

	.poster-wrapper {
		width: 640px;
	}
}

.controls-wrapper {
	padding-top: @line-height-computed;

	.btn-group,
	.btn-group + .btn {
		margin-right: @grid-gutter-width / 2;
	}

	.btn-group-vertical .btn {
		text-align: left;
	}

	.form-group,
	.btn-group {
		margin-bottom: @line-height-computed / 2;
	}

	label {
		display: block;
	}
}

header {
	background: @gray-darker;
	margin: 0;
	padding: @line-height-computed / 2 @grid-gutter-width / 2;
	color: @gray-lighter;

	a {
		color: @gray-lighter;
	}

	a:hover {
		color: @gray;
		text-decoration: none;
	}
	
	.icon-wrapper {
		position: fixed;
		top: 0;
		left: 0;
		padding: 30px 15px 0 15px;
		min-height: 89px;
		border-style: solid;
		border-color: @gray-lighter;
		border-width: 0 1px 0 0;
		font-size: 35px;
	}

	.header-wrapper {
		max-width: 1200px;
		margin: 0 auto;
		padding: 0 @grid-gutter-width / 2;
		padding-left: @grid-gutter-width * 2;
	}
	

	h1 {
		display: inline-block;
		text-transform: uppercase;
		font-weight: normal;
		-webkit-font-smoothing: antialiased;
	}

	img {
		position: relative;
		top: 5px;
		margin: @line-height-computed 0;
	}
}


.poster {
	height: 640px;
	width: 640px;
	background: #fff;
	margin: @line-height-computed;
	position: relative;
	padding: @grid-gutter-width * 2;
	font-size: 75px;
	line-height: 1 !important;
	overflow: hidden;	

	&.two-to-one {
		height: 320px;

		blockquote {
			margin-bottom: 20px;
		}

		.logo-wrapper {
			img {
				width: 150px;
			}
		}
	}

	&.poster-news {
		.logo-wrapper {
			.logo.logo-news {
				display: inline-block !important;
				border: none;

				.two-to-one& {
					height: 40px;
					width: auto;
				}
			}
		}
	}

	&.poster-music {
		background: @musicDark;
		color: @musicLight;

		.logo {
			border: 1px solid @musicLight;
		}

		.logo-wrapper {
			background: @musicDark;
			padding-bottom: @grid-gutter-width * 2 - 14;

			.logo.logo-music {
				display: inline-block !important;
				border: none;

				.two-to-one& {
					width: 242px;
					height: 65px;
					overflow: hidden;
					background: url('../img/npr-music-logo-small.png') no-repeat;
					padding-left: 242px;
				}
			}
		}
	}

	&.poster-snap-judgement {
		background: #C66137;
		color: #fff;

		.logo-wrapper {
			background: #C66137;
			color: #fff;
			padding-bottom: @grid-gutter-width * 2 - 14;

			.logo.logo-snap-judgement {
				display: inline-block !important;
				border: none;
				width: 300px;

				.two-to-one& {
					width: 150px;
				}
			}
		}
	}

	&.poster-fresh-air {
		.logo-wrapper {
			padding-bottom: @grid-gutter-width * 2 - 14;

			.logo.logo-fresh-air {
				display: inline-block !important;
				border: none;
			}
		}
	}

	.quote& {
		.left-quote {
			content:"\201C";
			display: block;
			position: absolute;
			top: @grid-gutter-width * 2;
			left: @grid-gutter-width * 2;
			font-weight: 700;
			margin-left: -0.55em;
		}
	}

	.left-quote,
	.right-quote {
		display: none;
	}

	blockquote {
		padding: 0;
		margin: 0 0 @line-height-computed * 2;
		border-left: none;
		font-size: inherit;
		line-height: 100%;
		font-weight: bold;
		display: block;

		&:focus {
			border: none;
			outline: none;
		}

		p {
			font-size: inherit;
			font-weight: inherit;
			margin: 0;
			line-height: 110%;

			span {
				line-height: inherit !important;
			}
		}

		&:last-child {
			color: red;
		}

		.quote& {

			p:last-child:after {
				content:"\201D";
				font-weight: 700;
			}

		}

		span {
			line-height: 1.2 !important;
		}
	}

	p.source {
		font-size: @font-size-base *1.5;
		font-weight: normal;
		line-height: 1.3;
		display: block;		
		margin-top: 0;

		&:focus {
			border: none;
			outline: none;
		}	

		.show-credit {
			span {
				font-style: normal;
			}
		}
	}

	.logo-wrapper {
		position: absolute;
		width: 100%;
		z-index: 100;
		bottom: 0;
		right: 0;
		text-align: right;
		padding:  @grid-gutter-width @grid-gutter-width * 2 @grid-gutter-width * 2;
		margin: 0;
		font-size: 46px;
		background: #fff;

		.logo {
			.hide;
		}
	}
}

